tests/spec/emit/snapshots/task_native_method_inlined_to_builtin_wraps_in_iife.snap
---
source: tests/spec/emit/concurrency.rs
description: "input: \nfn test() {\n  let xs = [1]\n  task xs.length()\n}\n"
---
package main

func test() {
	xs := []int{1}
	go func() {
		_ = len(xs)
	}()
}
