tests/spec/emit/snapshots/task_native_method_inlined_to_non_call_wraps_in_iife.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn test() {
    let xs = [1]
    task xs.is_empty()
  }
---
package main

func test() {
	xs := []int{1}
	go func() {
		_ = len(xs) == 0
	}()
}
