tests/spec/emit/snapshots/task_native_method_inlining_to_regular_call_skips_wrap.snap
---
source: tests/spec/emit/concurrency.rs
description: "input: \nfn test() {\n  let xs = [1, 2, 3]\n  task xs.contains(2)\n}\n"
---
package main

import "slices"

func test() {
	xs := []int{1, 2, 3}
	go slices.Contains(xs, 2)
}
