tests/spec/emit/snapshots/task_simple.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  import "go:fmt"
  
  fn compute() {
    fmt.Print(f"Hello from goroutine");
  }
  
  fn test() {
    task compute()
  }
---
package main

import "fmt"

func compute() {
	fmt.Print("Hello from goroutine")
}

func test() {
	go compute()
}
