tests/spec/emit/snapshots/task_with_block_body.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  import "go:fmt"
  
  fn test() {
    task {
      let x = 42;
      fmt.Print(f"Got {x}");
    }
  }
---
package main

import "fmt"

func test() {
	go func() {
		x := 42
		fmt.Printf("Got %d", x)
	}()
}
