tests/spec/emit/snapshots/third_party_go_import_path_emitted_in_full.snap
---
source: tests/spec/emit/imports.rs
description: |
  
  import "go:github.com/bwmarrin/discordgo"
  
  fn session() -> discordgo.Session {
    discordgo.Session{}
  }
---
package main

import "github.com/bwmarrin/discordgo"

func session() discordgo.Session {
	return discordgo.Session{}
}
