tests/spec/emit/snapshots/third_party_go_type_uses_short_package_qualifier.snap
---
source: tests/spec/emit/imports.rs
description: |
  
  import "go:github.com/bwmarrin/discordgo"
  
  fn make() -> Ref<discordgo.Session> {
    &discordgo.Session{}
  }
---
package main

import "github.com/bwmarrin/discordgo"

func make_() *discordgo.Session {
	return &discordgo.Session{}
}
