tests/spec/emit/snapshots/top_level_reference_not_pinned_before_call.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  const BASE = 10
  
  fn eff(x: mut Ref<int>) -> int {
    x.* = 1
    2
  }
  
  fn run() -> int {
    let mut i = 0
    let r = [BASE, eff(&i)]
    r[0] + r[1]
  }
---
package main

const Base int = 10

func eff(x *int) int {
	*x = 1
	return 2
}

func run() int {
	i := 0
	r := []int{Base, eff(&i)}
	return r[0] + r[1]
}
